--- a/dev/styl/mixins/general/full-size.styl
+++ b/dev/styl/mixins/general/full-size.styl
@@ -1,6 +1,11 @@
-fullSize()
-	position absolute
-	top 0
-	left 0
-	width 100%
-	height 100%
+fullSize(type = "none")
+  position absolute
+  top 0
+  left 0
+  width 100%
+  height 100%
+  
+  if (type == "img")
+    background-repeat no-repeat
+    background-position 50%
+    background-size cover 
