--- a/dev/styl/general/global/typography/link.styl
+++ b/dev/styl/general/global/typography/link.styl
@@ -1,5 +1,9 @@
 a
+  text-decoration none
   transition color t-default
 
   &:not([class])
-    text-decoration none
+    text-decoration underline
+    
+    &:hover
+      text-decoration none
