--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -1,11 +1,1 @@
-doctype
-html(lang="ru")
-  include general/head
-  body
-    .page-wrapper
-      .page-content
-        include general/header
-        main
-      include general/footer
-    include general/scripts
-    +scripts("", true, true)
+extends layouts/_index.pug
