add '$' from stylus variables

--- a/dev/styl/general/global/default.styl
+++ b/dev/styl/general/global/default.styl
@@ -5,9 +5,9 @@
 html
   min-width 320px
   height 100%
-  font-family default-font
-  fz-responsive(fz-min, fz-mid, fz-max, fz-min-point, fz-mid-point, fz-max-point, true)
-  color black
+  font-family $default-font
+  fz-responsive($fz-min, $fz-mid, $fz-max, $fz-min-point, $fz-mid-point, $fz-max-point, true)
+  color $black
 
 body
   height 100%
