--- a/dev/styl/general/global/typography/link.styl
+++ b/dev/styl/general/global/typography/link.styl
@@ -1,6 +1,6 @@
 a
   text-decoration none
-  transition color t-default
+  transition color $t-default
 
   &:not([class])
     text-decoration underline
