--- a/dev/styl/general/global/wrapper.styl
+++ b/dev/styl/general/global/wrapper.styl
@@ -1,6 +1,6 @@
 .wrapper
   margin 0 auto
-  padding 0 site-paddings
+  padding 0 $site-paddings
   position relative
   min-width 320px
   width 100%
