--- a/dev/styl/general/variables/adaptive.styl
+++ b/dev/styl/general/variables/adaptive.styl
@@ -1,26 +1,26 @@
 // Phone
 
-small-phone = 320px
-medium-phone = 360px
-large-phone = 420px
-large-phone-2 = 480px
+$small-phone = 320px
+$medium-phone = 360px
+$large-phone = 420px
+$large-phone-2 = 480px
 
 // End Phone
 
 // Tablet
 
-small-tablet = 640px
-medium-tablet = 768px
-large-tablet = 1024px
+$small-tablet = 640px
+$medium-tablet = 768px
+$large-tablet = 1024px
 
 // End Tablet
 
 // Desktop
 
-small-desktop = 1280px
-standart-desctop = 1366px
-medium-desktop = 1440px
-medium-desktop-2 = 1600px
-large-desktop = 1920px
+$small-desktop = 1280px
+$standart-desctop = 1366px
+$medium-desktop = 1440px
+$medium-desktop-2 = 1600px
+$large-desktop = 1920px
 
 // End Desktop
