--- a/dev/styl/general/variables/sizes.styl
+++ b/dev/styl/general/variables/sizes.styl
@@ -1,6 +1,6 @@
-fz-min = 13px
-fz-mid = 16px
-fz-max = 18px
-fz-min-point = 480px
-fz-mid-point = 1366px
-fz-max-point = 1920px
+$fz-min = 13px
+$fz-mid = 16px
+$fz-max = 18px
+$fz-min-point = 480px
+$fz-mid-point = 1366px
+$fz-max-point = 1920px
