--- a/dev/pug/general/head.pug
+++ b/dev/pug/general/head.pug
@@ -22,6 +22,7 @@ head
     link(rel="icon", type="img/png", href="/favicons/favicon-16x16.png", sizes="16x16")
     link(rel="icon", type="img/png", href="/favicons/favicon-32x32.png", sizes="32x32")
     link(rel="icon", type="img/png", href="/favicons/favicon-96x96.png", sizes="96x96")
+    link(rel="icon", type="img/png", href="/favicons/favicon-120x120.png", sizes="120x120")
     link(rel="icon", type="img/png", href="/favicons/favicon-128x128.png", sizes="128x128")
     link(rel="icon", type="img/png", href="/favicons/favicon-160x160.png", sizes="160x160")
     link(rel="icon", type="img/png", href="/favicons/favicon-196x196.png", sizes="196x196")
